plugins {
	id 'checkstyle'
	id 'java'
	id 'io.spring.javaformat'
	id 'org.springframework.boot'
}

apply plugin: 'io.spring.javaformat'

repositories {
	mavenCentral()
}

archivesBaseName = 'spring-calendar'

sourceCompatibility = 1.8
targetCompatibility = 1.8

dependencies {
	checkstyle "io.spring.javaformat:spring-javaformat-checkstyle:$javaFormatVersion"
	implementation platform(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)
	implementation 'net.sf.biweekly:biweekly:0.6.3'
	implementation 'org.apache.httpcomponents:httpclient'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.webjars:webjars-locator-core'
	implementation 'org.webjars:fullcalendar:4.3.1'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

checkstyle {
	configProperties = [ 'checkstyle.config.dir' : file('config/checkstyle') ]
}
